--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@emailjs/browser": "^3.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "swiper": "^10.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -28,5 +29,8 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "gh-pages": "^6.0.0",
     "vite": "^4.4.5"
-  }
+  },
+  "tags": [
+    "swiper"
+  ]
 }
