Alteração de rota para deploy

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://s0d4z3r0.github.io/portifolio-andre-falcao",
-  "name": "portifolio",
+  "homepage": "https://s0d4z3r0.github.io/portfolio-andre-falcao",
+  "name": "portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
